Implement basic functional requirements.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="10dp" >
+    android:layout_marginTop="10dp">
 
     <RelativeLayout
         android:id="@+id/state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:id="@+id/stateName"
@@ -18,41 +17,19 @@
             android:textSize="40sp" />
     </RelativeLayout>
 
-    <!--
-         TODO Why can't I define textSize and textStyle
-    	 in the timer container and have it inherited
-    	 by the TextViews?
-    -->
-
     <RelativeLayout
         android:id="@+id/timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/state"
-        android:layout_centerHorizontal="true" >
-
-        <TextView
-            android:id="@+id/minutes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/minutes"
-            android:textSize="80sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/colon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/minutes"
-            android:text="@string/colon"
-            android:textSize="80sp"
-            android:textStyle="bold" />
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:id="@+id/seconds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/colon"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="0dp"
             android:text="@string/seconds"
             android:textSize="80sp"
             android:textStyle="bold" />
@@ -63,22 +40,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/timer"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true">
 
         <Button
-            android:id="@+id/startStop"
+            android:id="@+id/multiButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onStartStop"
+            android:onClick="onButtonClick"
             android:text="@string/startStop" />
 
-        <Button
-            android:id="@+id/resetLap"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/startStop"
-            android:onClick="onLapReset"
-            android:text="@string/resetLap" />
     </RelativeLayout>
 
 </RelativeLayout>
